# native

./: .gitignore  LICENSE.md  README.md  __scratch.py  pyproject.toml  rxconfig.py  select.md
.github/workflows/: deploy.yml
ai/: README.md  build_chart_manifest.py  build_manifest.py  chart_manifest.json  chart_registry.py  cli.py  llm_client.py  manifest.json  mine_patterns.py  patterns.json  prompt_builder.py  registry.py  renderer.py  sample_bad.json  sample_good.json
assets/: globals.css  llms.txt  night_in_paradise.css  theme-preview.js  themes.css  typeset-preview.js  typeset.css
components/: accordion.py  avatar.py  badge.py  button.py  card.py  checkbox.py  code.py  dialog.py  hugeicon.py  input.py  input_group.py  menu.py  select.py  separator.py  slider.py  spinner.py  switch.py  textarea.py
components/chart/: chart_tooltip.py
components/core/: core.py  hugeicon.py
components/ui/: accordion.py  attachment.py  avatar.py  badge.py  bubble.py  button.py  button_group.py  card.py  checkbox.py  code.py  dialog.py  field.py  frame.py  input.py  input_group.py  marker.py  menu.py  message.py  select.py  separator.py  slider.py  spinner.py  switch.py  table.py  tabs.py  textarea.py
docs/charts/: area_chart.md  bar_chart.md  line_chart.md
frontend/: __spa-fallback.html  index.html  prism.css  prism.js  sitemap.xml  themes.css
native/: __scratch.py  export.py  native.py
reflex.lock/: package.json
scripts/: generate_anatomy.py  generate_llms.py  generate_markdown.py  generate_markdown_template.py  generate_preview_cards.py  generate_registry.py
(+407 files in other folders)
